--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
-    "@react-three/drei": "^9.61.3",
-    "@react-three/fiber": "^8.12.0",
+    "@react-three/drei": "^9.56.5",
+    "@react-three/fiber": "^8.10.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -26,10 +26,12 @@
     "react-router-dom": "^6.10.0",
     "react-spring": "^9.7.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.151.2",
+    "three": "^0.149.0",
+    "three-stdlib": "^2.21.6",
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
