--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "@types/three": "^0.150.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.10.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.10.0",
     "react-spring": "^9.7.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.32.0",
     "three": "^0.149.0",
     "three-stdlib": "^2.21.6",
     "typescript": "5.0.3"
